syntax = "proto3";

package fileupload;

option go_package = "./proto";

service FileUpload {
    rpc uploadFile(stream FileChunk) returns (UploadStatus) {}
}

message FileChunk {
    string name_file = 1;
    string name_db = 2;
    bytes zip_file = 3;
    
}

message UploadStatus {
    bool success = 1;
}